# gCalendar-mcp-python

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_calendar/: __init__.py  server.py
tests/: test_imports.py
