[build-system]
requires = ["setuptools>=61.0"]   # wheel 생략해도 빌드 도구가 자동 설치
build-backend = "setuptools.build_meta"

[project]
name = "mcp-calendar-python"
version = "0.2.1"
description = "MCP server for Google Calendar integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [ # verified details를 위해 추가
  {name = "Jaemin You", email = "2dois2be@gmail.com"}
]
license = {text = "MIT"} # verified details를 위해 추가
dependencies = [
  "mcp[cli]>=1.6.0",
  "python-dotenv>=1.1.0",
  "google-api-python-client>=2.168.0",
  "google-auth>=2.39.0",
  "google-auth-oauthlib>=1.2.2",
]
classifiers = [ # verified details를 위해 추가
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent"
]

[project.urls] # verified details를 위해 추가
"Homepage" = "https://github.com/tobedoit/gCalendar-mcp-python"
"Bug Tracker" = "https://github.com/tobedoit/gCalendar-mcp-python/issues"
"Source Code" = "https://github.com/tobedoit/gCalendar-mcp-python"

[project.scripts]
mcp-calendar-python = "mcp_calendar.server:main"

## 배포 아카이브에서 제외할 파일
# [tool.setuptools.exclude-package-data]
# "*" = ["uv.lock", "tests/*"]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]